submitted the homework2

--- a/Homework2/Templates/simple-template/index.html
+++ b/Homework2/Templates/simple-template/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -13,8 +13,10 @@
     </style>
   </head>
   <body>
-    <h2>ECS 272 Assignment 3 D3 Template</h2>
-    <div id="container"> <div id="tooltip"></div></div>
-    <script src="main.js"></script>
+      <h2>ECS 272 Assignment 3 D3 Template</h2>
+      <div id="container">
+          <div id="tooltip"></div>
+          <script src="main.js"></script>
+      </div>
   </body>
 </html>
