--- a/Homework2/pragarwal/Templates/es6-webpack-template/node/src/css/styles.css
+++ b/Homework2/pragarwal/Templates/es6-webpack-template/node/src/css/styles.css
@@ -16,7 +16,7 @@ h1 {
 
 #myClass3 {
     color: white;
-    float: right;
+    float: left;
 }
 
 body{
@@ -97,7 +97,7 @@ body{
 
 
 .container1 {
-    width: 50%;
+    width: 40%;
     height: 300px;
     float: left;
     /* position: relative; */
@@ -119,14 +119,14 @@ body{
 }
 
 .container3 {
-    width: 40%;
+    width: 50%;
     height: 300px;
     float: right;
     /* position: relative; */
     margin-bottom: 60px;
     /* margin-left: 10px; */
     margin-top: 20px;
-    margin-right: 20px;
+    margin-left: 10px;
 }
 
 #stackedbarchart {
