--- a/Homework3/jtjlin/src/App.css
+++ b/Homework3/jtjlin/src/App.css
@@ -111,8 +111,8 @@ button {
 
 .axis text {
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
-  /* stroke: blueviolet;
-  stroke-width: 1px; */
+  stroke: blueviolet;
+  stroke-width: 1px;
   cursor: move;
 }
 
