--- a/Homework3/jaeyun/views/index.pug
+++ b/Homework3/jaeyun/views/index.pug
@@ -49,54 +49,19 @@ html
 				width: 100%;
 				z-index: 10000;
 			}
-			.hidden {
-				display: none !important;
-			}
-			.blurred {
-				filter: blur(1px);
-				transition: filter 200ms;
-			}
-			.tutorial_step {
-				position: relative;
-			}
-			.shaded_overlay {
-				position: absolute;
-				// display: none;
-				width: 100%;
-				height: 100%;
-				top: 0;
-				left: 0;
-				right: 0;
-				bottom: 0;
-				background-color: rgba(0, 0, 0, 0.4);
-				transition: background-color 800ms;
-				z-index: 2;
-			}
-			.tutorial_message_container {
-				position: absolute;
-				top: 0;
-				left: 0;
-				right: 0;
-				bottom: 0;
-			}
-			.tutorial_message {
-				position: absolute;
-				margin: auto;
-				padding: 16px 32px;
-				color: #fff;
-				font-size: 1.4em;
-				border-radius: 4px;
-				background-color: rgba(0, 0, 0, 0.8);
-				z-index: 3;
-			}
 
 	body
 		div#loading
 			div.spinning_loader
 				div.spinner
+				div#spinner_label(style='text-align: center; color: #eee; font-size: 1.2em;') Downloading Dataset
 
 		div.tutorial_message_container
 			div.tutorial_message
+				div.message
+				div.tutorial_button_container
+					input#skip_tutorial.btn.btn-outline-warning(type='button' value='Skip')
+					input#next_tutorial.btn.btn-outline-light(type='button' value='Next')
 
 		div.page
 			div.left_pane
@@ -108,12 +73,12 @@ html
 							div Discover songs visually.
 							div(style='margin: auto;')
 							div Requires WebGL. Made for Chromium.
-							div(style='color: rgba(0, 0, 0, 0.5); font-weight: normal; margin-left: 4px;') v2.5
+							div(style='color: rgba(0, 0, 0, 0.5); font-weight: normal; margin-left: 4px;') v3.0
 
-					div.play_pane.blurred.tutorial_step(data-step='0')
+					div#play_pane.blurred.tutorial_step(data-step='1')
 						div.shaded_overlay
 						div#spotify_pane.left_pane
-							iframe#spotify_frame(src='https://open.spotify.com/embed/track' frameborder='0' allowtransparency='true' allow='encrypted-media')
+							iframe#spotify_frame(src='https://open.spotify.com/embed/track' frameborder='0' allowtransparency='true' allow='encrypted-media' height='320px')
 						dif.right_pane
 							div.input-group
 								div.input-group-prepend
@@ -124,18 +89,18 @@ html
 									label.input-group-text Search
 								input#table_search.form-control(type='text' placeholder='Find in table...')
 							div#table
-								div(style='color: #aaa;') Hover on a song to view it in t-SNE and radar charts.
+								div(style='color: #aaa; margin-left: 8px;') Hover on a cell to view it in t-SNE and radar charts.
 								table.table.table-sm.table-dark
 									thead
 										tr.head_row
 											th(scope='col' style='width: 40px;')
-											th(scope='col' style='min-width: 200px;') Name
-											th(scope='col' style='min-width: 200px;') Artists
-											th(scope='col' style='min-width: 200px;') Genres
-											th(scope='col' style='width: 90px;') Popularity
+											th(scope='col' style='width: 180px;') Name
+											th(scope='col' style='width: 150px;') Artists
+											// th(scope='col' style='min-width: 200px;') Genres
+											th(scope='col' style='width: 90px; text-align: center;') Popularity
 									tbody
 
-				div.bottom_pane.blurred.tutorial_step(data-step='1')
+				div#scatter_plot_container.bottom_pane.blurred.tutorial_step(data-step='2')
 					div.shaded_overlay
 					div#scatter_plot_buttons
 						div.input-group
@@ -150,7 +115,7 @@ html
 
 			div.right_pane
 
-				div.top_pane.blurred.tutorial_step(data-step='2')
+				div#pcoord_plot_container.top_pane.blurred.tutorial_step(data-step='5')
 					div.shaded_overlay
 					div.input-group
 						div.input-group-prepend
@@ -162,11 +127,11 @@ html
 
 				div.bottom_pane
 
-					div.left_pane.blurred.tutorial_step(data-step='3')
+					div.left_pane.blurred.tutorial_step(data-step='6')
 						div.shaded_overlay
 						div#radar_plot
 
-					div.right_pane.tutorial_step(data-step='4')
+					div#bar_chart_container.right_pane.blurred.tutorial_step(data-step='7')
 						div.shaded_overlay
 						div.input-group
 							div.input-group-prepend
