--- a/Homework3/znwu/src/components/worldmap/WorldMap.scss
+++ b/Homework3/znwu/src/components/worldmap/WorldMap.scss
@@ -16,7 +16,7 @@ body {
 #countries .active {
   stroke: black;
 
-  stroke-width: 2px;
+  stroke-width: 0.5px;
 }
 .tooltip {
 	color: #222; 
@@ -27,4 +27,26 @@ body {
 	text-shadow: #f5f5f5 0 1px 0;
 	opacity: 0.9; 
 	position: absolute;
+  max-width: 500px;
+  font-size: 10px;
+}
+
+.tooltip td {
+  font-size: 10px;
+}
+
+
+#events {
+  stroke: white;
+  // stroke-width: 0.2px;
+}
+
+#events .active {
+  stroke: navy;
+  // stroke-width: 0.2px;
+}
+
+#events .selected {
+  stroke: navy;
+  // stroke-width: 0.2px;
 }
