--- a/FinalProject/group9/src/routes/Total_alliance.css
+++ b/FinalProject/group9/src/routes/Total_alliance.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
 }
-
+#manual{
+  text-align: left;
+  margin-left: 15pt;
+  margin-bottom: 15pt;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
