--- a/FinalProject/group9/src/routes/Alliance.css
+++ b/FinalProject/group9/src/routes/Alliance.css
@@ -37,41 +37,35 @@
   }
 }
 
-#tooltip {
-  min-width: 100px;
-  min-height: 50px;
+#explorer{
+  float: left;
+  padding: 5px;
+  margin: 0 5px;
+  color: #222;
 }
 
 
-#nyears {
-  width : 500px;
-  font: 1rem 'Fira Sans', sans-serif;
+#vis {
+  width: 2000;
+  height: 3000;
+  float:inherit;
 }
 
-#container{
-  margin-left: 200px;
-  margin-right: 200px;
-} 
-
-h2 {
-  color:#32353a;
-  font-family: 'Helvetica Neue, Arial';
-  font-size:xx-large;
-  color: rgb(49, 54, 59); /* text color */
+#container {
+  max-width: 1000;
+  max-height: 700;
 }
 
-
-body {
-  background-color: rgba(228,233,239,255);
-  color:rgb(248, 248, 248); /* text color */
-  font-size: large;
-}
-
-#tooltip,
-#container{
-  background-color:rgb(49, 54, 59);
-}
-
-#slider{
-  color:rgb(28, 69, 97); /* text color */
+div.tooltip{
+  position: absolute;
+  z-index: 10;
+  visibility: hidden;
+  padding: 10px;
+  background-color: rgba(237, 244, 255, 0.7);
+  box-shadow: rgb(0 0 0 / 20%) 2px 2px 5px;
+  backdrop-filter: blur(2px);
+  color: rgb(33, 51, 79);
+  font-family: sans-serif;
+  top: 791px;
+  left: 572px;
 }
