--- a/FinalProject/group9/src/routes/Area2.css
+++ b/FinalProject/group9/src/routes/Area2.css
@@ -37,41 +37,14 @@
   }
 }
 
-#tooltip {
-  min-width: 100px;
-  min-height: 50px;
+#imgs {
+      justify-content:space-around;
 }
 
-
-#nyears {
-  width : 500px;
-  font: 1rem 'Fira Sans', sans-serif;
-}
-
-#container{
+#container2{
   margin-left: 200px;
   margin-right: 200px;
-} 
-
-h2 {
-  color:#32353a;
-  font-family: 'Helvetica Neue, Arial';
-  font-size:xx-large;
-  color: rgb(49, 54, 59); /* text color */
+  justify-content:space-around;
+  background-color:rgb(156,172,188);
 }
 
-
-body {
-  background-color: rgba(228,233,239,255);
-  color:rgb(248, 248, 248); /* text color */
-  font-size: large;
-}
-
-#tooltip,
-#container{
-  background-color:rgb(49, 54, 59);
-}
-
-#slider{
-  color:rgb(28, 69, 97); /* text color */
-}
