--- a/FinalProject/group9/src/routes/GDP.css
+++ b/FinalProject/group9/src/routes/GDP.css
@@ -64,10 +64,13 @@ h2 {
 body {
   background-color: rgba(228,233,239,255);
   color:rgb(248, 248, 248); /* text color */
-  font-size: large;
 }
 
-#tooltip,
+#tooltip{
+  background-color: rgba(228,233,239,255);
+  color:rgb(46, 44, 54); /* text color */
+}
+
 #container{
   background-color:rgb(49, 54, 59);
 }
