--- a/FinalProject/group9/src/routes/Total_alliance.css
+++ b/FinalProject/group9/src/routes/Total_alliance.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
 }
-
+#manual{
+  text-align: left;
+  margin-left: 15pt;
+  margin-bottom: 15pt;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -37,41 +41,13 @@
   }
 }
 
-#tooltip {
-  min-width: 100px;
-  min-height: 50px;
+#vis {
+  width: 2000;
+  height: 3000;
+  float:inherit;
 }
 
-
-#nyears {
-  width : 500px;
-  font: 1rem 'Fira Sans', sans-serif;
-}
-
-#container{
-  margin-left: 200px;
-  margin-right: 200px;
-} 
-
-h2 {
-  color:#32353a;
-  font-family: 'Helvetica Neue, Arial';
-  font-size:xx-large;
-  color: rgb(49, 54, 59); /* text color */
-}
-
-
-body {
-  background-color: rgba(228,233,239,255);
-  color:rgb(248, 248, 248); /* text color */
-  font-size: large;
-}
-
-#tooltip,
-#container{
-  background-color:rgb(49, 54, 59);
-}
-
-#slider{
-  color:rgb(28, 69, 97); /* text color */
+#container {
+  max-width: 1000;
+  max-height: 700;
 }
