--- a/FinalProject/src/css/styles.css
+++ b/FinalProject/src/css/styles.css
@@ -32,6 +32,28 @@ div.tooltip {
     opacity: 0.9; 
     position: absolute;
   }
+.labeltooltip {
+    color: #222; 
+    background: #fff; 
+    padding: .5em; 
+    text-shadow: #f5f5f5 0 1px 0;
+    border-radius: 2px; 
+    box-shadow: 0px 0px 2px 0px #a6a6a6; 
+    opacity: 0.9; 
+    position: absolute;
+}
+.labeltext {
+    color: #222; 
+    background: #fff; 
+    padding: .5em; 
+    text-shadow: #f5f5f5 0 1px 0;
+    border-radius: 2px; 
+    box-shadow: 0px 0px 2px 0px #a6a6a6; 
+    opacity: 0.9; 
+    position: absolute;
+    font-size: 10px;
+}
+
 .graticule {
     fill: none;
     stroke: #bbb;
@@ -43,3 +65,59 @@ div.tooltip {
     stroke-width: 1px;
   }
   
+
+ /* css for edge bundling chart */
+ .land {
+  fill: #dddddd;
+}
+
+.border {
+  fill: none;
+  stroke-width: 1px;
+}
+
+.interior {
+  stroke: white;
+}
+
+.exterior {
+  stroke: #bbbbbb;
+}
+
+.airport {
+  fill: white;
+  opacity: 0.6;
+  stroke: #252525;
+}
+
+.flight {
+  fill: none;
+  stroke: #252525;
+  stroke-width: 1px;
+  stroke-opacity: 0.1;
+}
+
+.voronoi {
+  fill: none;
+  stroke: none;
+  stroke-width: 1px;
+}
+
+.highlight {
+  opacity: 1 !important;
+  stroke: red !important;
+  stroke-width: 2px !important;
+  stroke-opacity: 0.8 !important;
+}
+
+g#voronoi {
+  pointer-events: all;
+}
+
+/* shadow trick from bl.ocks.org */
+#tooltip {
+  font-size: 10pt;
+  font-weight: 900;
+  fill: white;
+  text-shadow: 1px 1px 0 #252525, 1px -1px 0 #252525, -1px 1px 0 #252525, -1px -1px 0 #252525;
+} 
