--- a/FinalProject/group9/src/routes/Threat.css
+++ b/FinalProject/group9/src/routes/Threat.css
@@ -37,6 +37,12 @@
   }
 }
 
+#manual{
+  text-align: left;
+  margin-left: 15pt;
+  margin-bottom: 15pt;
+}
+
 #explorer{
   float: left;
   padding: 5px;
