--- a/FinalProject/react-template/react-d3/src/Geo.css
+++ b/FinalProject/react-template/react-d3/src/Geo.css
@@ -38,9 +38,23 @@
     height: 95%;
     background-color: white;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+
 }
+
+.geoPageLayout .GMcontainer .controlPanel .info_window{
+    display: flex;
+    align-items: flex-start;
+    justify-content: left;
+    flex-direction: column;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    width: 100%;
+    margin-top: 10%;
+    padding: 5% 5% 5% 5%;
+}
+
 
 .geoPageLayout .GMcontainer .controlPanel select{
     width: 90%;
