--- a/FinalProject/group9/src/routes/GDP.css
+++ b/FinalProject/group9/src/routes/GDP.css
@@ -37,42 +37,41 @@
   }
 }
 
-#manual{
-  text-align: left;
-  margin-left: 80pt;
-  margin-right: 80pt;
-  margin-bottom: 15pt;
+#tooltip {
+  min-width: 100px;
+  min-height: 50px;
 }
 
-#vis {
-  width: 2000;
-  height: 3000;
-  float:inherit;
+
+#nyears {
+  width : 500px;
+  font: 1rem 'Fira Sans', sans-serif;
 }
 
-#container {
-  max-width: 1000;
-  max-height: 700;
+#container{
+  margin-left: 200px;
+  margin-right: 200px;
+} 
+
+h4 {
+  color: rgb(97, 99, 100); /* text color */
+  font-family:Arial, Helvetica, sans-serif;
 }
 
-div.tooltip{
-  position: absolute;
-  z-index: 10;
-  visibility: hidden;
-  padding: 10px;
-  background-color: rgba(237, 244, 255, 0.7);
-  box-shadow: rgb(0 0 0 / 20%) 2px 2px 5px;
-  backdrop-filter: blur(2px);
-  color: rgb(33, 51, 79);
-  font-family: sans-serif;
-  top: 791px;
-  left: 572px;
+body {
+  background-color: rgba(228,233,239,255);
 }
 
-h2{
-  font-family: sans-serif;
+#tooltip{
+  background-color: rgba(228,233,239,255);
+  color:rgb(46, 44, 54); /* text color */
 }
 
-p{
-  font-family: sans-serif;
+#container{
+  background-color:rgb(49, 54, 59);
+  color:rgb(255, 255, 255); /* text color */
+}
+
+#slider{
+  color:rgb(28, 69, 97); /* text color */
 }
