--- a/FinalProject/react-template/react-d3/src/Geo.css
+++ b/FinalProject/react-template/react-d3/src/Geo.css
@@ -66,11 +66,27 @@
     color: white;
     padding: 15px 32px;
     text-align: center;
-    margin-bottom: 5%;
-    margin-top: 5%;
     text-decoration: none;
     display: inline-block;
-    font-size: 5vw;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    height: 5vh;
+    width: 10vw;
+  }
+
+  .home:hover{
+    text-decoration: none;  
+  }
+
+  a{
+      text-decoration: none;
+  }
+
+  a:hover{
+    text-decoration: none;    
   }
 
 
