--- a/FinalProject/react-template/react-d3/src/ImageSKY.css
+++ b/FinalProject/react-template/react-d3/src/ImageSKY.css
@@ -27,7 +27,7 @@
 }
 .GeoSKYPageLayout .SKYcontainer .SKY{
     display: flex;
-    flex-basis: 95%;
+    flex-basis: 70%;
     height: 95%;
     background-color: white;
 }
@@ -62,7 +62,7 @@
 }
 .PCSKYPageLayout .SKYcontainer .SKY{
     display: flex;
-    flex-basis: 80%;
+    flex-basis: 70%;
     height: 95%;
     background-color: white;
     border: black;
@@ -72,28 +72,44 @@
 
 .geoPageLayout .SKYcontainer .controlPanel{
     display:flex;
-    flex-basis: 15%;
+    flex-basis: 25%;
     height: 95%;
     background-color: white;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    flex-direction: column;
 
 }
 
 .PCSKYPageLayout .SKYcontainer .controlPanel{
     display:flex;
-    flex-basis: 15%;
+    flex-basis: 25%;
     height: 95%;
     background-color: white;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    flex-direction: column;
+}
 
+.controlPanel .info_window{
+    display: flex;
+    align-items: flex-start;
+    justify-content: left;
+    flex-direction: column;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    width: 100%;
+    padding: 5% 5% 5% 5%;
+    flex-basis: 20%;
 }
 
 input[type="range"]{
     transform: rotate(270deg);
     width: 100%;
+    flex-basis: 40%;
+
+
 }
 
