--- a/FinalProject/group9/src/App.css
+++ b/FinalProject/group9/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+#manual{
+  text-align: left;
+  margin-left: 120pt;
+  margin-right: 120pt;
+  margin-bottom: 15pt;
+}
+
+#areachart_label{
+  margin-left: 100px;
+}
