--- a/FinalProject/group9/src/routes/Threat.css
+++ b/FinalProject/group9/src/routes/Threat.css
@@ -39,8 +39,8 @@
 
 #manual{
   text-align: left;
-  margin-left: 80pt;
-  margin-right: 80pt;
+  margin-left: 120pt;
+  margin-right: 120pt;
   margin-bottom: 15pt;
 }
 
@@ -71,6 +71,7 @@ div.tooltip{
 
 h2{
   font-family: sans-serif;
+  margin-bottom: 30px;
 }
 
 p{
